# BB8

./: .gitignore  README.md  meson.build
src/: main.cpp  meson.build
src/visualization/: buffer.cpp  buffer.hpp  frame_resources.cpp  frame_resources.hpp  frame_sync.cpp  frame_sync.hpp  meson.build  swap_chain.cpp  swap_chain.hpp  visualization.cpp  visualization.hpp  vulkan_application.cpp  vulkan_application.hpp  window.cpp  window.hpp
src/visualization/resources/: image.cpp  image.hpp  meson.build
src/visualization/shaders/: embed.py  meson.build  shader.vert  uniform_buffer_object.hpp  vertex.cpp
src/visualization/vulkan/: application.cpp  application.hpp  buffer.cpp  buffer.hpp  depth_buffer.cpp  depth_buffer.hpp  device.cpp  device.hpp  frame_resources.cpp  frame_resources.hpp  glm.hpp  image.cpp  image.hpp  memory.cpp  memory.hpp  meson.build  model.cpp  model.hpp  swap_chain.cpp  swap_chain.hpp  texture.cpp  texture.hpp  utilities.cpp  utilities.hpp  window.cpp  window.hpp
src/visualization/vulkan/shaders/: embed.py  shader.frag  shader.vert  uniform_buffer_object.cpp  uniform_buffer_object.hpp  vertex.cpp  vertex.hpp
subprojects/: stb_image.wrap  tinyobjloader.wrap
subprojects/packagefiles/stb-2.28/: meson.build
subprojects/packagefiles/tinyobjloader/: meson.build
